--- a/airflow/config_templates/default_airflow.cfg
+++ b/airflow/config_templates/default_airflow.cfg
@@ -434,6 +434,10 @@ force_log_out_after = 0
 # The UI cookie lifetime in days
 session_lifetime_days = 30
 
+# Have the webserver save the dagbag to the DB every refresh. Set to true if you're
+# running without a scheduler and want DAGS to show up in the webserver
+locally_sync_dagbag = False
+
 [email]
 email_backend = airflow.utils.email.send_email_smtp
 
