--- a/airflow/config_templates/config.yml
+++ b/airflow/config_templates/config.yml
@@ -919,10 +919,11 @@
       type: string
       example: ~
       default: "30"
-    - name: locally_sync_dagbag
+    - name: sync_dagbag_to_db
       description: |
-        Have the webserver save the dagbag to the DB every refresh. Set to true if you're
-        running without a scheduler and want DAGS to show up in the webserver
+        Have the webserver save the dagbag to the DB every gunicorn master restart.
+        Set to true if you're running without a scheduler and want DAGS to show up in
+        the webserver
       version_added: 1.10.10
       type: boolean
       default: "False"
